@@ -1,3 +1,7 @@
+2008-05-06  Mark Ellis  <mark@mpellis.org.uk>
+
+	* update synce.7, add some comments to configure.ac.in
+
 2008-05-04  Mark Ellis  <mark@mpellis.org.uk>
 
 	* add all error codes
